fix: top spacing for navbar

--- a/css/base.css
+++ b/css/base.css
@@ -49,6 +49,7 @@ a {
   --foreground: var(--pokemon-card-text);
   --animation-timing: 200ms ease-in-out;
   --hamburger-height: calc(var(--bar-height) * 3 + var(--hamburger-gap) * 2);
+  --navbar-height: 70px;
 }
 
 .heading {
