--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,4 @@
 .navbar {
-  --navbar-height: 70px;
   display: flex;
   background-color: var(--primary-400);
   justify-content: space-between;
